turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: identifier expected but integer literal found.
def step(5) 
         ^LangtonsAnt:32: error: ':' expected but '}' found.
}
^